<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_base_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/add_image_button"
                    style="@style/img_button_source"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_add_a_photo"
                    android:contentDescription="@string/fragment_main_add_image"/>

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/buttons_block"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/fragment_main_btn_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_main_rotate"/>

                <Button
                    android:id="@+id/fragment_main_btn_invert_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_main_btn_rotate"
                    android:text="@string/fragment_main_invert_colors"/>

                <Button
                    android:id="@+id/fragment_main_btn_mirror_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_main_btn_invert_colors"
                    android:text="@string/fragment_main_mirror_image"/>
            </RelativeLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_main_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>
</layout>